--- a/ART/styles.css
+++ b/ART/styles.css
@@ -59,3 +59,91 @@ a,i {
 #navbar a {
     width: 80px;
 }
+
+#navbar a:hover{
+    color: #C1B696;
+}
+
+
+.main-image{
+    height: 400px;
+    background-image: url("./img/g_1.jpg");
+    margin-bottom: 30px;
+    position: relative;
+}
+
+.main-image-info{
+    background-color: #fff;
+    padding: 25px;
+    position: absolute;
+    left: 25px;
+    bottom: 25px;
+}
+
+#img2, #img3, #img4, #img5, #img6 {
+    height: 200px;
+}
+
+#img2{
+    background-image: url("./img/g_2.jpg");
+}
+
+#img3{
+    background-image: url("./img/g_3.jpg");
+}
+
+#img4{
+    background-image: url("./img/g_4.jpg");
+}
+
+#img5{
+    background-image: url("./img/g_5.jpg");
+}
+
+#img6{
+    background-image: url("./img/g_6.jpg");
+}
+
+
+#gallery-container h1 {
+    text-align: center;
+}
+
+#gallery-container h1,
+#gallery-container .col-md-6,
+#gallery-container  .col-m12{
+    margin-bottom: 50px;
+}
+
+.small-image-container{
+    height: 250px;
+    margin-bottom: 20px;
+}
+
+footer{
+    border-top: 1px solid #ccc;
+    height: 250px;
+    padding: 30px;
+}
+
+footer i {
+    font-size: 20px;
+}
+
+#social-icons-container {
+    padding: 25px;
+}
+
+#social-icons-container div {
+    text-align: center;
+}
+
+
+footer p {
+    text-align: center;
+    margin: 20px;
+}
+
+a:hover i{
+    color: #C1B696;
+}
